--- a/posts/201805.md
+++ b/posts/201805.md
@@ -8,13 +8,13 @@ In dcrd and dcrwallet developers have been [experimenting](https://github.com/de
 
 Decrediton: 1.2.1 bugfix [release](https://github.com/decred/decred-binaries/releases/tag/v1.2.1), work on SPV [has started](https://github.com/decred/decrediton/pull/1389), chart additions are in progress. Further simplification of the staking process is in the pipeline ([slack](https://decred.slack.com/archives/C5H9Z63AA/p1525528370000062)).
 
-Politeia: new [command line tool](https://github.com/decred/politeia/pull/267) to interact with Politeia API, general development is ongoing. Help with testing is very welcome: please check this [test plan](https://github.com/decred/politeia/issues/265) and join [#politeia](https://decred.slack.com/archives/C88HEA7DK) to get started.
+Politeia: new [command line tool](https://github.com/decred/politeia/pull/267) to interact with Politeia API, general development is ongoing. Help with testing will soon be welcome: this [test plan](https://github.com/decred/politeia/issues/265)  sets out a test plan, join [#politeia](https://decred.slack.com/archives/C88HEA7DK) to follow progress and partiicpate in testing.
 
 dcrdata: work ongoing on [improved design](https://github.com/decred/dcrdata/issues/451), adding [more charts](https://github.com/decred/dcrdata/pull/463) and improving Insight API support.
 
 Android: design work [advancing](https://github.com/decred/dcrandroid/issues/80).
 
-Decreds own [DNS seeder](https://github.com/decred/dcrseeder) (dcrseeder) was [released](https://twitter.com/decredproject/status/996442267538751488). It is written in Go and it properly supports service bit filtering, which will allow SPV nodes to find full nodes that support compact filters.
+Decred's own [DNS seeder](https://github.com/decred/dcrseeder) (dcrseeder) was [released](https://twitter.com/decredproject/status/996442267538751488). It is written in Go and it properly supports service bit filtering, which will allow SPV nodes to find full nodes that support compact filters.
 
 Ticket splitting service by @matheusd [entered](https://twitter.com/decredproject/status/997560763727265792) beta and [demonstrated](https://www.youtube.com/watch?v=XsVJ1WWsWlA) an 11-way split on mainnet. Help with testing is much appreciated, please join [#ticket_splitting](https://decred.slack.com/messages/CAUF860P3/) to participate in splits, but check [this doc](https://github.com/matheusd/dcr-split-ticket-matcher/blob/master/docs/beta.md) to learn about the risks. Reddit discussion [here](https://www.reddit.com/r/decred/comments/8kgrqg/what_many_of_you_have_been_waiting_for_ticket/).
 
@@ -26,13 +26,13 @@ Atomic swap with Ethereum on testnet was [demonstrated](https://twitter.com/bebr
 
 Two new faces were [added](https://github.com/decred/dcrweb/commit/9a410a33c2e3dc95405c264523d28c43678123e6) to [contributors](https://decred.org/contributors/) page.
 
-Dev activity stats for May: 238 active PRs, 195 master commits, 32,831 added and 22,280 deleted lines spread across 8 repositories done by 4-10 developers per repository. ([chart](https://twitter.com/decredproject/status/1002963653778214912))
+Dev activity stats for May: 238 active PRs, 195 master commits, 32,831 added and 22,280 deleted lines spread across 8 repositories. Contributions came from 4-10 developers per repository. ([chart](https://twitter.com/decredproject/status/1002963653778214912))
 
 ## Network
 
 Hashrate: rapid growth from ~4,000 TH/s at the beginning of the month to ~15,000 at the end with new all time high of 17,949. Interesting dynamic in [hashrate distribution](https://dcred.eu/powStats) across mining pools: coinmine.pl share down from 55% to 25% while F2Pool up from 2% to 44%.
 
-Staking: 30-day average ticket price is 91.3 DCR (+0.8), stake participation is 46.9% (+0.8%) with 3.68 million DCR locked (+0.15). Min price was 85.56. On May 11 ticket price surged to 96.99, staying elevated for longer than usual. Locked DCR peaked at 47.17%. This was [speculated](https://www.reddit.com/r/decred/comments/8ixay1/decred_investment_thesis_by_placeholder_ventures/dyvpgg5/?context=3) to be a result of a large miner staking.
+Staking: 30-day average ticket price is 91.3 DCR (+0.8), stake participation is 46.9% (+0.8%) with 3.68 million DCR locked (+0.15). Min price was 85.56. On May 11 ticket price surged to 96.99, staying elevated for longer than usual after such a pump. Locked DCR peaked at 47.17%. [nrpalao](https://www.reddit.com/user/nrpalao) on reddit [suggested](https://www.reddit.com/r/decred/comments/8ixay1/decred_investment_thesis_by_placeholder_ventures/dyvpgg5/?context=3) that the DCR for these tickets likely came from a miner with significant hashrate.
 
 Nodes: there are 226 public listening and 405 normal nodes per [dcred.eu](https://dcred.eu/nodeStats). Version distribution: 45% on v1.2.0 (up from 24% last month), 39% on v1.1.2, 15% on v1.1.0 and 1% running outdaded versions.
 
@@ -44,7 +44,7 @@ Obelisk team [posted](https://medium.com/obelisk-blog/obelisk-update-january-may
 
 @SiaBillionaire [estimated](https://decred.slack.com/archives/C3P6R055Z/p1526221654000039) that 7940 DCR1 units were sold in Batches 1-5, while Lynmar13 [shared](https://medium.com/@brian7249694/the-current-state-of-the-obelisk-dcr1-fff97f6877be) his projections of DCR1 profitability ([reddit](https://www.reddit.com/r/decred/comments/8lgbv2/the_current_state_of_the_obelisk_dcr1/)).
 
-New Chinese miner was noticed by our Telegram group. Woodpecker WB2 specs 1.5 TH/s at 1200 W, costs 15,000 CNY (~2,340 USD) and the initial 150 units are expected to ship on Aug 15. ([pow8.com](https://pow8.com/product.php) – [translated](https://translate.google.com/translate?sl=auto&tl=en&hl=en&ie=UTF-8&u=https://pow8.com/product.php))
+A new Chinese miner for sale was noticed by our Telegram group. Woodpecker WB2 specs 1.5 TH/s at 1200 W, costs 15,000 CNY (~2,340 USD) and the initial 150 units are expected to ship on Aug 15. ([pow8.com](https://pow8.com/product.php) – [translated](https://translate.google.com/translate?sl=auto&tl=en&hl=en&ie=UTF-8&u=https://pow8.com/product.php))
 
 Another new miner is iBelink DSM6T: 6 TH/s at 2100 W costing $6,300 ([ibelink.co](https://ibelink.co/product/ibelink-dsm6t-blake256-miner-with-6-th-s-hash-rate/)). Shipping starts from June 5. Some concerns and links were posted in these [two](https://www.reddit.com/r/decred/comments/8kutc4/ibelink_6th_miner/) [threads](https://www.reddit.com/r/decred/comments/8ljg9t/ibelink_decred_miner_available/dzg8f7v/).
 
@@ -54,7 +54,7 @@ A new mining pool is [available](https://www.reddit.com/r/decred/comments/8hba71
 
 Another infrastructure addition is [tokensmart.io](https://tokensmart.io/), a newly audited stake pool with 0.8% fee. There are a total of 14 [stake pools](https://decred.org/stakepools/) now.
 
-Moving on to exchange integrations:
+Exchange integrations:
 
 * Upbit added [DCR/KRW](https://twitter.com/decredproject/status/992453050425008128) and [DCR/USDT](https://twitter.com/decredproject/status/1001885561127292928) pairs. A user [reported](https://decred.slack.com/archives/C3PBR19L4/p1526859809000035) that DCR deposits and withdrawals are now available.
 * CoinEx [announced](https://twitter.com/coinexcom/status/994127050305777664) the launch of DCR/BTC and DCR/BCH pairs.
