--- a/posts/201805.md
+++ b/posts/201805.md
@@ -8,7 +8,7 @@ In dcrd and dcrwallet developers have been [experimenting](https://github.com/de
 
 Decrediton: 1.2.1 bugfix [release](https://github.com/decred/decred-binaries/releases/tag/v1.2.1), work on SPV [has started](https://github.com/decred/decrediton/pull/1389), chart additions are in progress. Further simplification of the staking process is in the pipeline ([slack](https://decred.slack.com/archives/C5H9Z63AA/p1525528370000062)).
 
-Politeia: new [command line tool](https://github.com/decred/politeia/pull/267) to interact with Politeia API, general development is ongoing. Help with testing will soon be welcome: this [test plan](https://github.com/decred/politeia/issues/265)  sets out a test plan, join [#politeia](https://decred.slack.com/archives/C88HEA7DK) to follow progress and partiicpate in testing.
+Politeia: new [command line tool](https://github.com/decred/politeia/pull/267) to interact with Politeia API, general development is ongoing. Help with testing will soon be welcome: this [test plan](https://github.com/decred/politeia/issues/265)  sets out a test plan, join [#politeia](https://decred.slack.com/archives/C88HEA7DK) to follow progress and particicpate in testing.
 
 dcrdata: work ongoing on [improved design](https://github.com/decred/dcrdata/issues/451), adding [more charts](https://github.com/decred/dcrdata/pull/463) and improving Insight API support.
 
