--- a/posts/201805.md
+++ b/posts/201805.md
@@ -148,29 +148,35 @@ Decred scored B (top 3) in [Weiss Ratings](https://www.reddit.com/r/decred/comme
 
 Chinese institute is [developing](https://www.reddit.com/r/decred/comments/8iv6d3/chinas_new_rating_system_decred_one_of_28/) another rating system for blockchains. First round [included](http://www.ccidnet.com/2018/0511/10385800.shtml) Decred ([translated](https://translate.google.com/translate?sl=auto&tl=en&hl=en&ie=UTF-8&u=http://www.ccidnet.com/2018/0511/10385800.shtml)). Upon [release](http://special.ccidnet.com/pub-bc-eval/) Decred ranked 26. For context, Bitcoin ranked 13.
 
-Articles, videos and audios:
+Articles:
 
 * Team Spotlight: Decred, Pedal Steel Guitar, and Thoughts on Bitcoin From an Exodus Developer ([medium.com](https://medium.com/exodus-movement/team-spotlight-decred-pedal-steel-guitar-and-thoughts-on-bitcoin-from-an-exodus-developer-ace9f713a3d9), missed in April issue)
 * Decred: A Cryptocurrency That Combines PoW, PoS ([investopedia.com](https://www.investopedia.com/news/decred-cryptocurrency-combines-pow-pos/), translated to [Spanish](https://es.insider.pro/tutorials/2018-05-18/criptomoneda-decred-guia-completa/) and [Russian](https://ru.insider.pro/tutorials/2018-05-18/kriptovalyuta-decred-polnoe-rukovodstvo/))
 * Decred Price Booms on Consensus 2018 Publicity ([cryptovest.com](https://cryptovest.com/news/decred-dcr-price-booms-on-consensus-2018-publicity/))
-* Iterative Capital partner Chris Dannen and journalist Ben Schiller speak with Marco and Jonathan from Decred at Consensus 2018 ([soundcloud](https://soundcloud.com/iterative-capital/the-decred-team))
-* Decred Review: What is DCR, the Decred Community & Possible Challenges by BitBoy Crypto ([youtube](https://www.youtube.com/watch?v=4RpYh8ZlndM))
 * Decred Leads By Example With Fair Governance ([cryptodaily.co.uk](https://cryptodaily.co.uk/2018/05/decred-dcr-leads-example-fair-governance/))
 * Graph showing your ticket's chance to vote on any given day ([twitter](https://twitter.com/stakeynet/status/997215644281069568))
-* Decred Founder: Bitcoin Paved Way, Phase 2 Will Shock You! (Marco Peereboom) by Pure Blockchain Wealth ([youtube](https://www.youtube.com/watch?v=DC4dmTQd8vU))
 * Decred: More Steps to Fame, as Price Shoots Above $110 ([cryptovest.com](https://cryptovest.com/news/decred-dcr-more-steps-to-fame-as-price-shoots-above-110/))
 * Sole Survivor: Decred Unaffected in Latest Market Downturn ([cryptovest.com](https://cryptovest.com/news/sole-survivor-decred-dcr-unaffected-in-latest-market-downturn/))
 * Placeholder VC Puts Money on Decred to Rival Bitcoin ([btcmanager.com](https://btcmanager.com/placeholder-vc-puts-money-on-decred-to-rival-bitcoin/))
 * Decred Is The Most Undervalued Cryptocurrency With A 15% Dividend-Like Yield, Possibly The Next Bitcoin ([seekingalpha.com](https://seekingalpha.com/article/4176171-decred-undervalued-cryptocurrency-15-percent-dividend-like-yield-possibly-next-bitcoin))
 * Decred Coin News: What makes Decred coin price to go over $100? ([theoofy.com](https://theoofy.com/12161/decred-coin-news-what-makes-decred-dcr-coin-price-to-go-over-100/))
 * Asian Cryptocurrency Trading Update: Only Decred Showing a Gain ([newsbtc.com](https://www.newsbtc.com/2018/05/22/asian-cryptocurrency-trading-update-only-decred-showing-a-gain/))
-* Decred & Blocknet: Revolutionary governance for every community feat. JZ at Consensus 2018 ([youtube](https://www.youtube.com/watch?v=5OdrAGpVa7U))
 * Why Decred? Let the community tell you! by Noah Pierau ([medium.com](https://medium.com/decred/why-decred-let-the-community-tell-you-5479929e35d2))
-* Decred coin - Will it be better than Bitcoin? by Bitassist ([youtube](https://www.youtube.com/watch?v=dZ34FwDZOaQ))
 * A post by @DecredKing arguing being first in crypto is not enough ([medium.com](https://medium.com/@DecredKing/decred-2-years-old-bitcoin-10-years-old-do-we-care-which-was-first-no-we-dont-8c6874845b3d))
 * Why Decred is the new Bitcoin ([globalcoinreport.com](https://globalcoinreport.com/why-decred-dcr-is-the-new-bitcoin/))
 * The Long-Term Bullish Case for Decred by Ben Davidow ([medium.com](https://medium.com/sunrise-over-the-merkle-trees/the-long-term-bullish-case-for-decred-e7ed7cd1f99f))
 * Hardware Companies Are Launching Dedicated ASIC Miners for Decred ([btcmanager.com](https://btcmanager.com/hardware-companies-are-launching-dedicated-asic-miners-for-decred/))
+
+Audios:
+
+* Iterative Capital partner Chris Dannen and journalist Ben Schiller speak with Marco and Jonathan from Decred at Consensus 2018 ([soundcloud](https://soundcloud.com/iterative-capital/the-decred-team))
+
+Videos:
+
+* Decred Review: What is DCR, the Decred Community & Possible Challenges by BitBoy Crypto ([youtube](https://www.youtube.com/watch?v=4RpYh8ZlndM))
+* Decred Founder: Bitcoin Paved Way, Phase 2 Will Shock You! (Marco Peereboom) by Pure Blockchain Wealth ([youtube](https://www.youtube.com/watch?v=DC4dmTQd8vU))
+* Decred & Blocknet: Revolutionary governance for every community feat. JZ at Consensus 2018 ([youtube](https://www.youtube.com/watch?v=5OdrAGpVa7U))
+* Decred coin - Will it be better than Bitcoin? by Bitassist ([youtube](https://www.youtube.com/watch?v=dZ34FwDZOaQ))
 
 ## Community Discussions
 
