--- a/posts/201805.md
+++ b/posts/201805.md
@@ -104,7 +104,7 @@ PiedPiperCoin [hired](https://twitter.com/piedpipercoin/status/99432105069025690
 
 More creative promos by @jackliv3r: [Contributing](https://twitter.com/jackliv3r/status/991530212407087106), [Stake Now](https://twitter.com/jackliv3r/status/991915426006421504), [The Splitting](https://twitter.com/jackliv3r/status/992666676683558913), [Forbidden Exchange](https://twitter.com/jackliv3r/status/993714390305255424), [Atomic Swaps](https://twitter.com/jackliv3r/status/994281678637076482).
 
-Reminder: Stakey has his own Twitter [account](https://twitter.com/dcrstakey) where he posts some quality virulent content.
+Reminder: Stakey has his own Twitter [account](https://twitter.com/dcrstakey) where he tweets about his antics and pours scorn on the holders of expired tickets.
 
 "Autonomy" coin sculpture is [available](http://www.sigmasixdesign.com/bitcoingallery-store#!/Autonomy-DCR/p/104025070/category=28247023) at sigmasixdesign.com.
 
