--- a/posts/201805.md
+++ b/posts/201805.md
@@ -32,7 +32,7 @@ Dev activity stats for May: 238 active PRs, 195 master commits, 32,831 added and
 
 ## Network
 
-Hashrate: rapid growth from ~4,000 TH/s at the beginning of the month to ~15,000 at the end with new all time high of 17,949. Interesting dynamic in [hashrate distribution](https://dcred.eu/powStats) across mining pools: coinmine.pl share down from 55% to 25% while F2Pool up from 2% to 44%.
+Hashrate: rapid growth from ~4,000 TH/s at the beginning of the month to ~15,000 at the end with new all time high of 17,949. Interesting dynamic in [hashrate distribution](https://dcred.eu/powStats) across mining pools: coinmine.pl share down from 55% to 25% while F2Pool up from 2% to 44%. \[Note: as of June 6, the hashrate continues to rise and has already passed 22,000 TH/s\]
 
 Staking: 30-day average ticket price is 91.3 DCR (+0.8), stake participation is 46.9% (+0.8%) with 3.68 million DCR locked (+0.15). Min price was 85.56. On May 11 ticket price surged to 96.99, staying elevated for longer than usual after such a pump. Locked DCR peaked at 47.17%. [jet_user](https://www.reddit.com/user/jet_user) on reddit [suggested](https://www.reddit.com/r/decred/comments/8ixay1/decred_investment_thesis_by_placeholder_ventures/dyvpgg5/?context=3) that the DCR for these tickets likely came from a miner with significant hashrate.
 
@@ -62,8 +62,11 @@ Exchange integrations:
 * Brazilian exchange [OmniTrade](https://omnitrade.io/) [added](https://twitter.com/decredproject/status/999714011544350720) DCR/BRL fiat pair following a [poll](https://twitter.com/omnitrade_br/status/993294188795056128). Worth noting that it is one of the first to [integrate](https://twitter.com/omnitrade_br/status/976236441297719296) Trezor sign-in.
 * Bittrex [added](https://twitter.com/bittrexexchange/status/999811198723022853) [DCR/USDT](https://bittrex.com/Market/Index?MarketName=USDT-DCR) pair. Withdrawal fee was lowered to 0.01 DCR per user's [report](https://decred.slack.com/archives/C0NRMDVMJ/p1527502501000413).
 * Cryptopia enabled [DCR/USDT](https://www.cryptopia.co.nz/Exchange?market=DCR_USDT) pair too.
+* There are reports that DCR was added to [Abucoins](https://abucoins.com/) and [Tor Exchange](https://www.torchange.com/) but we don't know much about them.
 
 OpenBazaar [released](https://twitter.com/openbazaar/status/996526909587705856) an update that allows one to trade cryptocurrencies, [including](https://twitter.com/openbazaar/status/1000749737744756741) DCR.
+
+@i2Rav from [i2trading](https://i2trading.com/) is now offering two sided OTC market liquidity on DCR/USD in [#trading](https://decred.slack.com/messages/C3PBR19L4/) channel.
 
 [Paytomat](https://paytomat.com/), payments solution for point of sale and e-commerce, [integrated](https://medium.com/paytomat/paytomat-development-report-monthly-updates-5cb695b1a60e) Decred. (missed in April issue)
 
@@ -81,7 +84,7 @@ New merchants:
 
 An update from VotoLegal:
 
-> michae2xl: Voto Legal: CEO Thiago Rondon of Appcívico, has already been contated by 800 politicians and negotiations have started with four pre-candidates for the presidency  
+> michae2xl: Voto Legal: CEO Thiago Rondon of Appcívico, has already been contacted by 800 politicians and negotiations have started with four pre-candidates for the presidency  
 > https://twitter.com/decred_br/status/995294237771091968 ([slack](https://decred.slack.com/archives/C5HPHMFQF/p1526133098000099))
 
 Blockfolio rolled out Signal Beta with Decred [in the list](https://twitter.com/decredproject/status/995361130821378051). Users who own or watch a coin will automatically receive updates pushed by project teams. Nice to see this Journal made it to the screenshot!
@@ -104,7 +107,7 @@ PiedPiperCoin [hired](https://twitter.com/piedpipercoin/status/99432105069025690
 
 More creative promos by @jackliv3r: [Contributing](https://twitter.com/jackliv3r/status/991530212407087106), [Stake Now](https://twitter.com/jackliv3r/status/991915426006421504), [The Splitting](https://twitter.com/jackliv3r/status/992666676683558913), [Forbidden Exchange](https://twitter.com/jackliv3r/status/993714390305255424), [Atomic Swaps](https://twitter.com/jackliv3r/status/994281678637076482).
 
-Reminder: Stakey has his own Twitter [account](https://twitter.com/dcrstakey) where he posts some quality virulent content.
+Reminder: Stakey has his own Twitter [account](https://twitter.com/dcrstakey) where he tweets about his antics and pours scorn on the holders of expired tickets.
 
 "Autonomy" coin sculpture is [available](http://www.sigmasixdesign.com/bitcoingallery-store#!/Autonomy-DCR/p/104025070/category=28247023) at sigmasixdesign.com.
 
@@ -140,7 +143,7 @@ Upcoming events:
 * [O'Reilly Open Source Convention](https://conferences.oreilly.com/oscon/oscon-or) in Portland, USA on July 18-19. Unlike many "regular" events this one is developer focused. @raedah's team will attend.
 * If you are interested in Decred event in San Francisco Bay Area please check [this thread](https://www.reddit.com/r/decred/comments/8ftdyj/bay_area_community/).
 
-There is a community initiative by @vj to organize information related to events in a [repository](https://github.com/heyvj/decred-events). Jump on [#event_planning](https://decred.slack.com/messages/C66363X44/) channel to contribute.
+There is a community initiative by @vj to organize information related to events in a [repository](https://github.com/heyvj/decred-events). Jump in [#event_planning](https://decred.slack.com/messages/C66363X44/) channel to contribute.
 
 ## Media
 
@@ -202,9 +205,11 @@ The month of May has seen Decred earn some much deserved attention in the market
 
 The addition of a much awaited KRW pair on Upbit saw the price briefly double on some exchanges. This pair opens up direct DCR to fiat trading in one of the largest cryptocurrency markets in the world.
 
-@i2Rav started posting OTC quotes on [#trading](https://decred.slack.com/messages/C3PBR19L4/) channel:
+An update from @i2Rav:
 
 > We have begun trading DCR in large volume daily. The interest around DCR has really started to grow in terms of OTC quote requests. More and more customers are asking about trading it.
+
+Like in previous month, Decred scores high by "% down from ATH" indicator being #2 on [onchainfx](https://onchainfx.com/) as of June 6.
 
 ## Relevant External
 
@@ -235,4 +240,4 @@ Some source links point to Slack messages. Although Slack hides history older th
 
 Most information from third parties is relayed directly from source with a minimal sanity check. The authors of Decred Journal have no ability to verify all claims. Please beware of scams and do your own research.
 
-Credits (Slack names, alphabetical order): bee, Richard-Red, solar.
+Credits (Slack names, alphabetical order): bee, Richard-Red, snr01 and solar.
