--- a/posts/201805.md
+++ b/posts/201805.md
@@ -16,13 +16,13 @@ dcrdata: work ongoing on [improved design](https://github.com/decred/dcrdata/iss
 
 Android: design work [advancing](https://github.com/decred/dcrandroid/issues/80).
 
-Decred's own [DNS seeder](https://github.com/decred/dcrseeder) (dcrseeder) was [released](https://twitter.com/decredproject/status/996442267538751488). It is written in Go and it properly supports service bit filtering, which will allow SPV nodes to find full nodes that support compact filters.
+Decred's own DNS seeder ([dcrseeder](https://github.com/decred/dcrseeder)) was [released](https://twitter.com/decredproject/status/996442267538751488). It is written in Go and it properly supports service bit filtering, which will allow SPV nodes to find full nodes that support compact filters.
 
 Ticket splitting service by @matheusd [entered](https://twitter.com/decredproject/status/997560763727265792) beta and [demonstrated](https://www.youtube.com/watch?v=XsVJ1WWsWlA) an 11-way split on mainnet. Help with testing is much appreciated, please join [#ticket_splitting](https://decred.slack.com/messages/CAUF860P3/) to participate in splits, but check [this doc](https://github.com/matheusd/dcr-split-ticket-matcher/blob/master/docs/beta.md) to learn about the risks. Reddit discussion [here](https://www.reddit.com/r/decred/comments/8kgrqg/what_many_of_you_have_been_waiting_for_ticket/).
 
 Trezor support is [expected](https://decred.slack.com/archives/C3PBR19L4/p1525638426000046) to land in their [next firmware update](https://github.com/trezor/trezor-mcu/milestone/2?closed=1).
 
-Decred is now [supported](https://medium.com/summa-technology/introducing-riemann-7c1c3cb4a52) by Riemann, a toolbox to construct transactions for many UTXO-based chains from human-readable strings.
+Decred is now [supported](https://medium.com/summa-technology/introducing-riemann-7c1c3cb4a52) by Riemann, a toolbox from James Prestwich to construct transactions for many UTXO-based chains from human-readable strings.
 
 Atomic swap with Ethereum on testnet was [demonstrated](https://twitter.com/bebrites/status/1001200089283678209) at Blockspot Conference LATAM.
 
@@ -32,9 +32,9 @@ Dev activity stats for May: 238 active PRs, 195 master commits, 32,831 added and
 
 ## Network
 
-Hashrate: rapid growth from ~4,000 TH/s at the beginning of the month to ~15,000 at the end with new all time high of 17,949. Interesting dynamic in [hashrate distribution](https://dcred.eu/powStats) across mining pools: coinmine.pl share down from 55% to 25% while F2Pool up from 2% to 44%.
+Hashrate: rapid growth from ~4,000 TH/s at the beginning of the month to ~15,000 at the end with new all time high of 17,949. Interesting dynamic in [hashrate distribution](https://dcred.eu/powStats) across mining pools: coinmine.pl share went down from 55% to 25% while F2Pool up from 2% to 44%. \[Note: as of June 6, the hashrate continues to rise and has already passed 22,000 TH/s\]
 
-Staking: 30-day average ticket price is 91.3 DCR (+0.8), stake participation is 46.9% (+0.8%) with 3.68 million DCR locked (+0.15). Min price was 85.56. On May 11 ticket price surged to 96.99, staying elevated for longer than usual after such a pump. Locked DCR peaked at 47.17%. [jet_user](https://www.reddit.com/user/jet_user) on reddit [suggested](https://www.reddit.com/r/decred/comments/8ixay1/decred_investment_thesis_by_placeholder_ventures/dyvpgg5/?context=3) that the DCR for these tickets likely came from a miner with significant hashrate.
+Staking: 30-day average ticket price is 91.3 DCR (+0.8), stake participation is 46.9% (+0.8%) with 3.68 million DCR locked (+0.15). Min price was 85.56. On May 11 ticket price surged to 96.99, staying elevated for longer than usual after such a pump. Locked DCR peaked at 47.17%. jet_user on reddit [suggested](https://www.reddit.com/r/decred/comments/8ixay1/decred_investment_thesis_by_placeholder_ventures/dyvpgg5/?context=3) that the DCR for these tickets likely came from a miner with significant hashrate.
 
 Nodes: there are 226 public listening and 405 normal nodes per [dcred.eu](https://dcred.eu/nodeStats). Version distribution: 45% on v1.2.0 (up from 24% last month), 39% on v1.1.2, 15% on v1.1.0 and 1% running outdaded versions.
 
@@ -62,12 +62,15 @@ Exchange integrations:
 * Brazilian exchange [OmniTrade](https://omnitrade.io/) [added](https://twitter.com/decredproject/status/999714011544350720) DCR/BRL fiat pair following a [poll](https://twitter.com/omnitrade_br/status/993294188795056128). Worth noting that it is one of the first to [integrate](https://twitter.com/omnitrade_br/status/976236441297719296) Trezor sign-in.
 * Bittrex [added](https://twitter.com/bittrexexchange/status/999811198723022853) [DCR/USDT](https://bittrex.com/Market/Index?MarketName=USDT-DCR) pair. Withdrawal fee was lowered to 0.01 DCR per user's [report](https://decred.slack.com/archives/C0NRMDVMJ/p1527502501000413).
 * Cryptopia enabled [DCR/USDT](https://www.cryptopia.co.nz/Exchange?market=DCR_USDT) pair too.
+* There are reports that DCR was added to [Abucoins](https://abucoins.com/) and [Tor Exchange](https://www.torchange.com/) but we don't know much about them.
 
 OpenBazaar [released](https://twitter.com/openbazaar/status/996526909587705856) an update that allows one to trade cryptocurrencies, [including](https://twitter.com/openbazaar/status/1000749737744756741) DCR.
 
+@i2Rav from [i2trading](https://i2trading.com/) is now offering two sided OTC market liquidity on DCR/USD in [#trading](https://decred.slack.com/messages/C3PBR19L4/) channel.
+
 [Paytomat](https://paytomat.com/), payments solution for point of sale and e-commerce, [integrated](https://medium.com/paytomat/paytomat-development-report-monthly-updates-5cb695b1a60e) Decred. (missed in April issue)
 
-CoinPayments, a payment processor supporting Decred, has [developed](https://twitter.com/coinpaymentsnet/status/996832463694393344) an integration with [@Shopify](https://twitter.com/Shopify) that allows connected merchants to accept cryptocurrencies in exchange for goods.
+CoinPayments, a payment processor supporting Decred, [developed](https://twitter.com/coinpaymentsnet/status/996832463694393344) an integration with [@Shopify](https://twitter.com/Shopify) that allows connected merchants to accept cryptocurrencies in exchange for goods.
 
 ## Adoption
 
@@ -77,12 +80,11 @@ New merchants:
 * [pepper.works](https://pepper.works/) allows one to shop on Amazon with crypto and also [offers](https://www.reddit.com/r/decred/comments/8iyqwp/shop_with_decred_on_pepperworks/) a discount.
 * [Hipptee](https://hipptee.com/) is a t-shirt shop and one of the first merchants to [utilize](https://twitter.com/hipptees/status/996872627296899073) the new Shopify integration, [accepts](https://www.reddit.com/r/decred/comments/8jze9o/hippteecom_now_accepts_decred_proofofshirts/) Decred. Of course it has [Decred t-shirts](https://hipptee.com/collections/shirts/products/decred-t-shirt), too.
 * [TokenPride](https://tokenpride.com/), a shop offering some unique crypto-themed products.
-* [cryptograffiti](https://cryptograffiti.com/) has [integrated](https://twitter.com/cryptograffiti/status/1002232898806726657) CoinPayments and now accepts DCR for its crypto art merch.
+* [cryptograffiti](https://cryptograffiti.com/) [integrated](https://twitter.com/cryptograffiti/status/1002232898806726657) CoinPayments and now accepts DCR for its crypto art merch.
 
 An update from VotoLegal:
 
-> michae2xl: Voto Legal: CEO Thiago Rondon of Appcívico, has already been contated by 800 politicians and negotiations have started with four pre-candidates for the presidency  
-> https://twitter.com/decred_br/status/995294237771091968 ([slack](https://decred.slack.com/archives/C5HPHMFQF/p1526133098000099))
+> michae2xl: Voto Legal: CEO Thiago Rondon of Appcívico, has already been contacted by 800 politicians and negotiations have started with four pre-candidates for the presidency ([slack](https://decred.slack.com/archives/C5HPHMFQF/p1526133098000099), [source tweet](https://twitter.com/decred_br/status/995294237771091968))
 
 Blockfolio rolled out Signal Beta with Decred [in the list](https://twitter.com/decredproject/status/995361130821378051). Users who own or watch a coin will automatically receive updates pushed by project teams. Nice to see this Journal made it to the screenshot!
 
@@ -94,7 +96,7 @@ Alex Evans, a cryptoeconomics researcher who recently joined Placeholder, [poste
 
 ## Marketing
 
-@Dustorf [published](https://decred.slack.com/archives/C0NRMDVMJ/p1525888252000305) March-April survey results ([pdf](https://files.slack.com/files-pri/T0NRMDTJQ-FALG3RB2M/decred_march.april_user_survey_results.pdf)). It analyzes 166 responses and has lots of interesting data. Just an example:
+@Dustorf [published](https://decred.slack.com/archives/C0NRMDVMJ/p1525888252000305) March–April survey results ([pdf](https://files.slack.com/files-pri/T0NRMDTJQ-FALG3RB2M/decred_march.april_user_survey_results.pdf)). It analyzes 166 responses and has lots of interesting data. Just an example:
 
 > "I own DECRED because I saw a YouTube video with DECRED Jesus and after seeing it I was sold."
 
@@ -104,7 +106,7 @@ PiedPiperCoin [hired](https://twitter.com/piedpipercoin/status/99432105069025690
 
 More creative promos by @jackliv3r: [Contributing](https://twitter.com/jackliv3r/status/991530212407087106), [Stake Now](https://twitter.com/jackliv3r/status/991915426006421504), [The Splitting](https://twitter.com/jackliv3r/status/992666676683558913), [Forbidden Exchange](https://twitter.com/jackliv3r/status/993714390305255424), [Atomic Swaps](https://twitter.com/jackliv3r/status/994281678637076482).
 
-Reminder: Stakey has his own Twitter [account](https://twitter.com/dcrstakey) where he posts some quality virulent content.
+Reminder: Stakey has his own Twitter [account](https://twitter.com/dcrstakey) where he tweets about his antics and pours scorn on the holders of expired tickets.
 
 "Autonomy" coin sculpture is [available](http://www.sigmasixdesign.com/bitcoingallery-store#!/Autonomy-DCR/p/104025070/category=28247023) at sigmasixdesign.com.
 
@@ -137,10 +139,11 @@ Second Decred meetup in Hangzhou, China. ([photos](https://twitter.com/decredpro
 Upcoming events:
 
 * [Decred Australia Meetup](https://www.facebook.com/events/162791024391758) in Melbourne, Australia on June 12. Organized by YBF Ventures, all backgrounds are [welcome](https://twitter.com/YBFVentures/status/1003599748572434432).
+* Brazil: meetup in Brasilia on June 13, meetup in Belo Horizonte on June 16 and [Campus Party Brasilia](http://brasil.campus-party.org/cpbrasilia/) on June 27.
 * [O'Reilly Open Source Convention](https://conferences.oreilly.com/oscon/oscon-or) in Portland, USA on July 18-19. Unlike many "regular" events this one is developer focused. @raedah's team will attend.
 * If you are interested in Decred event in San Francisco Bay Area please check [this thread](https://www.reddit.com/r/decred/comments/8ftdyj/bay_area_community/).
 
-There is a community initiative by @vj to organize information related to events in a [repository](https://github.com/heyvj/decred-events). Jump on [#event_planning](https://decred.slack.com/messages/C66363X44/) channel to contribute.
+There is a community initiative by @vj to organize information related to events in a [repository](https://github.com/heyvj/decred-events). Jump in [#event_planning](https://decred.slack.com/messages/C66363X44/) channel to contribute.
 
 ## Media
 
@@ -186,7 +189,7 @@ Reddit highlights: transparent [up/down voting](https://www.reddit.com/r/decred/
 
 @R3VoLuT1OneR posted a preview of a [proposal](https://www.reddit.com/r/decred/comments/8jbhgc/decred_cryptocurrency_scholarship_proposal/) from his company for Decred to offer scholarships for students.
 
-[r/dcrtrader](https://www.reddit.com/r/Dcrtrader/) gained a couple of new moderators, weekly automatic threads were reconfigured to monthly and empty threads were removed. Currently most trading talk happens on #trading and some leaks to [r/decred](https://www.reddit.com/r/decred/), but a separate trading sub offers some advantages: free speech and transparent moderation, in addition to standard reddit threaded discussion, permanent history and search.
+[r/dcrtrader](https://www.reddit.com/r/Dcrtrader/) gained a couple of new moderators, weekly automatic threads were reconfigured to monthly and empty threads were removed. Currently most trading talk happens on #trading and some leaks to r/decred. A separate trading sub offers some advantages: unlimited trading talk, broad range of allowed topics, free speech and transparent moderation, in addition to standard reddit threaded discussion, permanent history and search.
 
 Forum: potential [social attacks](https://forum.decred.org/threads/a-potential-social-attack-on-decred.5995/) on Decred.
 
@@ -202,9 +205,11 @@ The month of May has seen Decred earn some much deserved attention in the market
 
 The addition of a much awaited KRW pair on Upbit saw the price briefly double on some exchanges. This pair opens up direct DCR to fiat trading in one of the largest cryptocurrency markets in the world.
 
-@i2Rav started posting OTC quotes on [#trading](https://decred.slack.com/messages/C3PBR19L4/) channel:
+An update from @i2Rav:
 
 > We have begun trading DCR in large volume daily. The interest around DCR has really started to grow in terms of OTC quote requests. More and more customers are asking about trading it.
+
+Like in previous month, Decred scores high by "% down from ATH" indicator being #2 on [onchainfx](https://onchainfx.com/) as of June 6.
 
 ## Relevant External
 
@@ -233,6 +238,8 @@ Bittrex [plans](https://www.ccn.com/washington-based-bittrex-lists-usd-trading-p
 
 Some source links point to Slack messages. Although Slack hides history older than ~5 days, you can read individual messages if you paste the message link into chat with yourself. Digging the full conversation is hard but possible. The history of all channels bridged to Matrix is saved in Matrix. Therefore it is possible to dig history in Matrix if you know the timestamp of the first message. Slack links encode the timestamp: `https://decred.slack.com/archives/C5H9Z63AA/p1525528370000062` => `1525528370` => `2018-05-05 13:52:50`.
 
-Most information from third parties is relayed directly from source with a minimal sanity check. The authors of Decred Journal have no ability to verify all claims. Please beware of scams and do your own research.
+Most information from third parties is relayed directly from source after a minimal sanity check. The authors of Decred Journal have no ability to verify all claims. Please beware of scams and do your own research.
 
-Credits (Slack names, alphabetical order): bee, Richard-Red, solar.
+Your feedback is precious. You can post on [GitHub](https://github.com/xaur/decred-news/issues), comment on Reddit or message us in [#writers_room](https://decred.slack.com/messages/C9HC2NVTM/) channel.
+
+Credits (Slack names, alphabetical order): bee, Richard-Red, snr01 and solar.
