--- a/journal/201806.md
+++ b/journal/201806.md
@@ -2,30 +2,25 @@
 
 ## Development
 
-dcrd: Peer connectivity and management improvements (TODO: human summary -- more efficient network graph leading to e.g. faster sync?). New [optimization](https://github.com/decred/dcrd/pull/1273) gives 3-4x faster serving of headers, which is great for SPV. This was another step towards [multipeer parallel downloads](https://github.com/decred/dcrd/issues/1145) — this issue gives a clear overview of progress and planned work for next months. Some work for [improved sighash lago](https://github.com/decred/dcrd/issues/950).
+The biggest announcement of the month was the new kind of decentralized exchange [proposed](https://blog.decred.org/2018/06/05/A-New-Kind-of-DEX/) by Company 0. Check Community Discussions section for more on this.
+
+dcrd: Peer management and connectivity improvements. Some work for [improved sighash lago](https://github.com/decred/dcrd/issues/950). A new [optimization](https://github.com/decred/dcrd/pull/1273) that gives 3-4x faster serving of headers, which is great for SPV. This was another step towards multipeer parallel downloads — check [this issue](https://github.com/decred/dcrd/issues/1145) for a clear overview of progress and planned work for next months. As usual, codebase cleanup, improvements to error handling, test infrastructure and test coverage.
 
 Decrediton: work towards watching only wallets, lots of bugfixes and visual design improvements.
 
-Politeia is live on testnet! Useful links: [announcement](https://twitter.com/marco_peereboom/status/1009552512968482818), CLI session [example](https://gist.github.com/marcopeereboom/ee494a6864086e0b5a4ac8886a9c0397), [sample proposal](https://test-proposals.decred.org/proposals/c5241806166d89286be56cd2605e7d76537eb32a40a8f8d8bde3bff4c2fc6585/) with some votes, [mini-guide](https://github.com/decred/politeia/blob/master/politeia.md) how to compose a proposal.
+Trezor: Decred appeared in [firmware update](https://blog.trezor.io/june-updates-trezor-one-firmware-wallet-zcash-cashaddr-doge-e21cbdf9807d) and on [trezor website](https://trezor.io/coins/#DCR). Next step is integration in wallets. For Decrediton support you can track [this meta issue](https://github.com/decred/decrediton/issues/1491).
 
-Trezor support:
+Politeia is live on testnet! Useful links: [announcement](https://twitter.com/marco_peereboom/status/1009552512968482818), CLI session [example](https://gist.github.com/marcopeereboom/ee494a6864086e0b5a4ac8886a9c0397), [example proposal](https://test-proposals.decred.org/proposals/c5241806166d89286be56cd2605e7d76537eb32a40a8f8d8bde3bff4c2fc6585/) with some votes, [mini-guide](https://github.com/decred/politeia/blob/master/politeia.md) how to compose a proposal.
 
-* https://twitter.com/matheusd_tech/status/1011346942507536387
-* https://github.com/decred/decrediton/issues/1491 meta issue to track progress
-* https://twitter.com/lukebp_/status/1011407054555271168
-* https://twitter.com/morphymore/status/1011270672012603393
-
-dcrdata: Continued work on Insight API support, see this [master issue](https://github.com/decred/dcrdata/issues/400) for progress overview. It is important for integrations since Insight API is very popular. Ongoing work to add charts. A big database change to improve sorting on the Address page was [merged](https://github.com/decred/dcrdata/commit/006685be846ac9cfe7b9b76eebabdb7bffdaad18) and bumped version to 3.0. Work to visualize voting progress [continues](https://github.com/decred/dcrdata/pull/523).
+dcrdata: Continued work on Insight API support, see this [master issue](https://github.com/decred/dcrdata/issues/400) for progress overview. It is important for integrations since Insight API is very popular. Ongoing work to add charts. A big database change to improve sorting on the Address page was [merged](https://github.com/decred/dcrdata/commit/006685be846ac9cfe7b9b76eebabdb7bffdaad18) and bumped version to 3.0. Work to visualize agenda voting [continues](https://github.com/decred/dcrdata/pull/523).
 
 Ticket splitting: 11-way ticket split from last month [has voted](https://twitter.com/matheusd_tech/status/1007610236868399104) ([transaction](https://explorer.dcrdata.org/tx/957728a7b3b9ea02338552470535ca67a6bc4379b169959589b8a69060e764a8)).
 
 Ethereum support in atomicswap is [progressing](https://github.com/decred/atomicswap/issues/74) and welcomes more eyeballs.
 
-decred.org: revamped [Press page](https://decred.org/press/) with dozens of added links, and a shiny new [Roadmap page](https://decred.org/roadmap/).
+decred.org: revamped [Press page](https://decred.org/press/) with dozens of added articles, and a shiny new [Roadmap page](https://decred.org/roadmap/).
 
-decredinfo.com, a new dashboard website by lte013 (TODO: reddit)
-
-A new kind of decentralized exchange was [proposed](https://blog.decred.org/2018/06/05/A-New-Kind-of-DEX/) by Company 0.
+[decredinfo.com](https://decredinfo.com/): a new Decred dashboard by lte13. Reddit announcement [here](https://old.reddit.com/r/decred/comments/8tcs49/decredinfo_block_explorer_and_statistics_for/).
 
 ## Network
 
@@ -94,13 +89,13 @@ BlueYard Capital [announced](https://twitter.com/blueyard/status/100728727164359
 
 The company will be hosting an event in Berlin, see Events below.
 
-Arbitrade is [mining](https://arbitrade.io/newsletter/20180607_Domicile_Announcement_Exciting_News_and_Public_Correction.html) Decred:
+Arbitrade is now [mining](https://arbitrade.io/newsletter/20180607_Domicile_Announcement_Exciting_News_and_Public_Correction.html) Decred.
 
 ## Events
 
 Meetup in Belo Horizonte, Brazil.
 
-[Meetup](https://twitter.com/decred_br/status/1010947104611733504) in Rio de Janeiro, Brazil (TODO: happened?)
+[Meetup](https://twitter.com/decred_br/status/1010947104611733504) in Rio de Janeiro, Brazil. ([photo](https://twitter.com/JonathanVeg2/status/1012888639880167424))
 
 [Campus Party](http://brasil.campus-party.org/cpbrasilia/) in Brasilia, Brazil. @girino, Gabriel Rhama and Matheus Degiovani speaking about Decred. Matheus was interviewed by a TV channel.
 
