--- a/journal/201806.md
+++ b/journal/201806.md
@@ -97,12 +97,9 @@ Meetup in Belo Horizonte, Brazil.
 
 [Meetup](https://twitter.com/decred_br/status/1010947104611733504) in Rio de Janeiro, Brazil. ([photo](https://twitter.com/JonathanVeg2/status/1012888639880167424))
 
-[Campus Party](http://brasil.campus-party.org/cpbrasilia/) in Brasilia, Brazil. @girino, Gabriel Rhama and Matheus Degiovani speaking about Decred. Matheus was interviewed by a TV channel.
+[Campus Party](http://brasil.campus-party.org/cpbrasilia/) in Brasilia, Brazil. @girino, Gabriel Rhama and Matheus Degiovani talked about Decred. Matheus was interviewed by a TV channel.
 
-Blockchain Connect Conference in Sillicon Valley
-
-* https://twitter.com/jz_bz/status/1012078985595977734
-* https://www.eventbrite.com/e/blockchain-connect-conference-silicon-valley-2018-tickets-44353362100
+[Blockchain Connect Conference](https://www.eventbrite.com/e/blockchain-connect-conference-silicon-valley-2018-tickets-44353362100) in Silicon Valley, USA. ([photo](https://twitter.com/jz_bz/status/1012078985595977734)) 
 
 Upcoming events:
 
