--- a/journal/201806.md
+++ b/journal/201806.md
@@ -4,7 +4,7 @@
 
 The biggest announcement of the month was the new kind of decentralized exchange [proposed](https://blog.decred.org/2018/06/05/A-New-Kind-of-DEX/) by Company 0. Check Community Discussions section for more on this.
 
-dcrd: Peer management and connectivity improvements. Some work for [improved sighash lago](https://github.com/decred/dcrd/issues/950). A new [optimization](https://github.com/decred/dcrd/pull/1273) that gives 3-4x faster serving of headers, which is great for SPV. This was another step towards multipeer parallel downloads — check [this issue](https://github.com/decred/dcrd/issues/1145) for a clear overview of progress and planned work for next months. As usual, codebase cleanup, improvements to error handling, test infrastructure and test coverage.
+dcrd: Peer management and connectivity improvements. Some work for [improved sighash algo](https://github.com/decred/dcrd/issues/950). A new [optimization](https://github.com/decred/dcrd/pull/1273) that gives 3-4x faster serving of headers, which is great for SPV. This was another step towards multipeer parallel downloads — check [this issue](https://github.com/decred/dcrd/issues/1145) for a clear overview of progress and planned work for next months. As usual, codebase cleanup, improvements to error handling, test infrastructure and test coverage.
 
 Decrediton: work towards watching only wallets, lots of bugfixes and visual design improvements.
 
