--- a/journal/201806.md
+++ b/journal/201806.md
@@ -74,9 +74,9 @@ Guarda Wallet integrated Decred. Currently only in their web wallet, but more ma
 
 [NeverFiat](https://www.neverfiat.com/) marketplace now [accepts](https://www.reddit.com/r/decred/comments/8v0ii9/we_are_building_tomorrows_crypto_marketplace/) Decred. Notably it utilizes [GloBee](https://globee.com/) and recently announcent [Lightning support](https://neverfiat.com/blogs/blog/neverfiat-accepts-lightning-network-payments) for Bitcoin.
 
-BlueYard Capital [announced](https://twitter.com/blueyard/status/1007287271643598849) investment in Decred and intend to be long term supporters and to actively participate in the network's governance. In an [overview post](https://medium.com/@BlueYard/decred-82b284b4a795) they [stressed](https://twitter.com/ciaranoleary/status/1007288469952126977) core values of the project:
+BlueYard Capital [announced](https://twitter.com/blueyard/status/1007287271643598849) investment in Decred and the intent to be long term [supporters](https://twitter.com/ciaranoleary/status/1007288469952126977) and to actively participate in the network's governance. In an [overview post](https://medium.com/@BlueYard/decred-82b284b4a795) they stressed core values of the project:
 
-> There are a few other remarkable characteristics that are a testament to the DNA of the team behind Decred: there was no sale of DCR to investors, no venture funding, and no payment to exchanges to be listed — underscoring that the Decred team and contributors are all about doing the right thing for long term (as manifested in their [constitution](https://docs.decred.org/getting-started/constitution/) for the project).
+> There are a few other remarkable characteristics that are a testament to the DNA of the team behind Decred: there was no sale of DCR to investors, no venture funding, and no payment to exchanges to be listed — underscoring that the Decred team and contributors are all about doing the right thing for long term (as manifested in their [constitution](https://docs.decred.org/getting-started/constitution/) for the project).
 
 > The most encouraging thing we can see is both the quality and quantity of high calibre developers flocking to the project, in addition to a vibrant community attaching their identity to the project.
 
