--- a/journal/201806.md
+++ b/journal/201806.md
@@ -105,22 +105,22 @@ Upcoming events:
 
 > Hey guys! I'd like to share with you my latest adventure: Stakey Club, hosted at https://stakey.club/, is a website dedicated to Decred. I posted a few articles in Brazilian Portuguese and in English. I also translated to Portuguese some posts from the Decred Blog. I hope you like it! ([slack](https://decred.slack.com/archives/C9HC2NVTM/p1528825975000416))
 
-[@morphymore](https://twitter.com/morphymore) translated Placeholder's [Decred Investment Thesis](https://medium.com/@morphymore/%E4%B8%80%E7%AF%87-decred-%E7%9A%84%E6%B7%B1%E5%BA%A6%E7%A0%94%E7%A9%B6%E8%AB%96%E6%96%87-%E7%BF%BB%E8%AD%AF-43bf1afc7127) and Richard Red's [write-up on Politeia](https://medium.com/@morphymore/decred-%E9%80%8F%E9%81%8E-politeia-%E7%9A%84%E9%A0%85%E7%9B%AE%E5%9F%BA%E9%87%91%E6%B2%BB%E7%90%86-%E7%BF%BB%E8%AD%AF-8b65d58d22e4) to Chinese, while @DZ translated "Decred Roadmap 2018" to [Italian](https://medium.com/decred-ita/roadmap-di-decred-per-il-2018-f8af547c8147) and [Russian](https://medium.com/decred-russia/%D0%BF%D0%BB%D0%B0%D0%BD-%D0%B4%D0%B5%D0%B9%D1%81%D1%82%D0%B2%D0%B8%D0%B9-decred-%D0%BD%D0%B0-2018-%D0%B3%D0%BE%D0%B4-78096822b8ea), and "A New Kind of DEX" to [Russian](https://medium.com/decred-russia/%D0%BD%D0%BE%D0%B2%D1%8B%D0%B9-%D0%B2%D0%B8%D0%B4-%D0%B4%D0%B5%D1%86%D0%B5%D0%BD%D1%82%D1%80%D0%B0%D0%BB%D0%B8%D0%B7%D0%BE%D0%B2%D0%B0%D0%BD%D0%BD%D0%BE%D0%B3%D0%BE-%D0%BE%D0%B1%D0%BC%D0%B5%D0%BD%D0%B0-dex-27a05449de8f).
+[@morphymore](https://twitter.com/morphymore) translated Placeholder's [Decred Investment Thesis](https://medium.com/@morphymore/%E4%B8%80%E7%AF%87-decred-%E7%9A%84%E6%B7%B1%E5%BA%A6%E7%A0%94%E7%A9%B6%E8%AB%96%E6%96%87-%E7%BF%BB%E8%AD%AF-43bf1afc7127) and Richard Red's [write-up on Politeia](https://medium.com/@morphymore/decred-%E9%80%8F%E9%81%8E-politeia-%E7%9A%84%E9%A0%85%E7%9B%AE%E5%9F%BA%E9%87%91%E6%B2%BB%E7%90%86-%E7%BF%BB%E8%AD%AF-8b65d58d22e4) to Chinese, while @DZ translated Decred Roadmap 2018 to [Italian](https://medium.com/decred-ita/roadmap-di-decred-per-il-2018-f8af547c8147) and [Russian](https://medium.com/decred-russia/%D0%BF%D0%BB%D0%B0%D0%BD-%D0%B4%D0%B5%D0%B9%D1%81%D1%82%D0%B2%D0%B8%D0%B9-decred-%D0%BD%D0%B0-2018-%D0%B3%D0%BE%D0%B4-78096822b8ea), and A New Kind of DEX to [Russian](https://medium.com/decred-russia/%D0%BD%D0%BE%D0%B2%D1%8B%D0%B9-%D0%B2%D0%B8%D0%B4-%D0%B4%D0%B5%D1%86%D0%B5%D0%BD%D1%82%D1%80%D0%B0%D0%BB%D0%B8%D0%B7%D0%BE%D0%B2%D0%B0%D0%BD%D0%BD%D0%BE%D0%B3%D0%BE-%D0%BE%D0%B1%D0%BC%D0%B5%D0%BD%D0%B0-dex-27a05449de8f).
 
 Second issue of Chinese ratings [released](http://special.ccidnet.com/pub-bc-eval/). Compared to [first issue](https://archive.today/4Xhz6), Decred dropped from 26 to 29 while Bitcoin fell from 13 to 17. We (authors) try hard to refrain from commenting this one.
 
-Highlights|deep|featured|original research (blog posts|from individual authors?):
+Featured articles:
 
-https://medium.com/@zubairzia/apples-to-apples-decred-is-20x-more-expensive-to-attack-than-bitcoin-68bafeb4546f
-https://blockgeeks.com/guides/decred/
-https://www.wikicryptocoins.com/currency/Decred
-https://www.smithandcrown.com/introduction-to-decred/ by Smith + Crown
-https://medium.com/@researchpaper/investment-paper-on-decred-577188e5c8f6
-https://longcaller.com/coin/decred.html
-What is on-chain cryptocurrency governance? Is it plutocratic? by Richard Red ([medium](https://medium.com/@richardred/what-is-on-chain-cryptocurrency-governance-is-it-plutocratic-bfb407ef6f1))
-Why You Should Keep an Eye on Decred ([investinblockchain.com](https://www.investinblockchain.com/why-decred/))
+* Apples to apples, Decred is 20x more expensive to attack than Bitcoin by Zubair Zia ([medium](https://medium.com/@zubairzia/apples-to-apples-decred-is-20x-more-expensive-to-attack-than-bitcoin-68bafeb4546f))
+* Understanding Decred: Decentralized Governance and Decision Making on the Blockchain ([blockgeeks.com](https://blockgeeks.com/guides/decred/))
+* Decred cryptocurrency guide ([wikicryptocoins.com](https://www.wikicryptocoins.com/currency/Decred))
+* Introduction to Decred by Smith + Crown ([smithandcrown.com](https://www.smithandcrown.com/introduction-to-decred/))
+* Investment Reseach on Decred by @ResearchPaper ([medium](https://medium.com/@researchpaper/investment-paper-on-decred-577188e5c8f6))
+* Decred short and to-the-point review by Timur Badretdinov ([longcaller.com](https://longcaller.com/coin/decred.html))
+* What is on-chain cryptocurrency governance? Is it plutocratic? by Richard Red ([medium](https://medium.com/@richardred/what-is-on-chain-cryptocurrency-governance-is-it-plutocratic-bfb407ef6f1))
+* Why You Should Keep an Eye on Decred by By Daniel Frumkin ([investinblockchain.com](https://www.investinblockchain.com/why-decred/))
 
-Articles|news|coverage:
+Articles:
 
 https://cryptoslate.com/eos-cardano-ada-decred-dcr-receive-top-ratings-by-weiss-ratings/
 https://coin-turk.com/decred-dcr-nedir-nereden-alinir
