--- a/journal/201806.md
+++ b/journal/201806.md
@@ -147,17 +147,17 @@ Articles:
 
 Audios:
 
-* Unchained Podcast with Fat Protocols author Joel Monegro of Placeholder Ventures, hosted by Laura Shin (audio and links at [unchainedpodcast.co](http://unchainedpodcast.co/placeholders-joel-monegro-on-the-fat-protocols-thesis-today-ep65), audio on [itunes](https://itunes.apple.com/us/podcast/placeholders-joel-monegro-on-fat-protocols-thesis-today/id1123922160?i=1000413536533&mt=2), twitter threads: [@laurashin](https://twitter.com/laurashin/status/1006557785180389377) [@ljxie](https://twitter.com/ljxie/status/1006421319326396416))
+* Unchained Podcast with Fat Protocols author @jmonegro of @placeholdervc, hosted by @laurashin (audio and links at [unchainedpodcast.co](http://unchainedpodcast.co/placeholders-joel-monegro-on-the-fat-protocols-thesis-today-ep65), audio on [itunes](https://itunes.apple.com/us/podcast/placeholders-joel-monegro-on-fat-protocols-thesis-today/id1123922160?i=1000413536533&mt=2), twitter threads: [@laurashin](https://twitter.com/laurashin/status/1006557785180389377) [@ljxie](https://twitter.com/ljxie/status/1006421319326396416))
 
   > "I think that developers in the future are going to base their decision on where to build on the basis of governance and community. And so I look for good governance mechanisms and strong communities in blockchains." ([@decredproject](https://twitter.com/decredproject/status/1006631901560373248))
 
 Videos:
 
 * Can Decred Crack the Top 10? on Cheddar with @lukebp ([cheddar.com](https://cheddar.com/videos/can-decred-crack-the-top-10), [twitter](https://twitter.com/cheddar/status/1004814878538858497))
-* Decred Assembly - Ep20 - Governance: Driving the Future featuring ([youtube](https://www.youtube.com/watch?v=-rViMNjL2TA))
+* Decred Assembly - Ep20 - Governance: Driving the Future ([youtube](https://www.youtube.com/watch?v=-rViMNjL2TA))
 
   @cburniske and @traceagain discuss the importance of governance protocols being foundational and problems with delegated proof of stake
-* [@phenrikand](https://twitter.com/phenrikand) from [@ApolloCapitalAU](https://twitter.com/ApolloCapitalAU) chat with [@jm_buirski](https://twitter.com/jm_buirski) at [@YBFVentures](https://twitter.com/YBFVentures) ([youtube](https://www.youtube.com/watch?v=TbutOmE4yMg), [tweet](https://twitter.com/phenrikand/status/1008599031340077057), [tweet](https://twitter.com/ApolloCapitalAU/status/1008618074050875392))
+* [@phenrikand](https://twitter.com/phenrikand) from [@ApolloCapitalAU](https://twitter.com/ApolloCapitalAU) chat with [@joshuam_](https://twitter.com/joshuam_) at @YBFVentures ([youtube](https://www.youtube.com/watch?v=TbutOmE4yMg), [tweet](https://twitter.com/phenrikand/status/1008599031340077057), [tweet](https://twitter.com/ApolloCapitalAU/status/1008618074050875392))
 
 ## Community Discussions
 
