--- a/journal/201806.md
+++ b/journal/201806.md
@@ -6,9 +6,9 @@ The biggest announcement of the month was the new kind of decentralized exchange
 
 dcrd: Peer management and connectivity improvements. Some work for [improved sighash algo](https://github.com/decred/dcrd/issues/950). A new [optimization](https://github.com/decred/dcrd/pull/1273) that gives 3-4x faster serving of headers, which is great for SPV. This was another step towards multipeer parallel downloads — check [this issue](https://github.com/decred/dcrd/issues/1145) for a clear overview of progress and planned work for next months. As usual, codebase cleanup, improvements to error handling, test infrastructure and test coverage.
 
-Decrediton: work towards watching only wallets, lots of bugfixes and visual design improvements.
+Decrediton: work towards watching only wallets, lots of bugfixes and visual design improvements. Preliminary work to integrate SPV has begun.
 
-Trezor: Decred appeared in [firmware update](https://blog.trezor.io/june-updates-trezor-one-firmware-wallet-zcash-cashaddr-doge-e21cbdf9807d) and on [trezor website](https://trezor.io/coins/#DCR). Next step is integration in wallets. For Decrediton support you can track [this meta issue](https://github.com/decred/decrediton/issues/1491).
+Trezor: Decred appeared in [firmware update](https://blog.trezor.io/june-updates-trezor-one-firmware-wallet-zcash-cashaddr-doge-e21cbdf9807d) and on [Trezor website](https://trezor.io/coins/#DCR), currently for testnet only. Next steps are mainnet support and integration in wallets. For Decrediton support you can track [this meta issue](https://github.com/decred/decrediton/issues/1491).
 
 Politeia is live on testnet! Useful links: [announcement](https://twitter.com/marco_peereboom/status/1009552512968482818), CLI session [example](https://gist.github.com/marcopeereboom/ee494a6864086e0b5a4ac8886a9c0397), [example proposal](https://test-proposals.decred.org/proposals/c5241806166d89286be56cd2605e7d76537eb32a40a8f8d8bde3bff4c2fc6585/) with some votes, [mini-guide](https://github.com/decred/politeia/blob/master/politeia.md) how to compose a proposal.
 
@@ -21,6 +21,8 @@ Ethereum support in atomicswap is [progressing](https://github.com/decred/atomic
 decred.org: revamped [Press page](https://decred.org/press/) with dozens of added articles, and a shiny new [Roadmap page](https://decred.org/roadmap/).
 
 [decredinfo.com](https://decredinfo.com/): a new Decred dashboard by lte13. Reddit announcement [here](https://old.reddit.com/r/decred/comments/8tcs49/decredinfo_block_explorer_and_statistics_for/).
+
+Dev activity stats for May: 245 active PRs, 184 master commits, 25,973 added and 13,575 deleted lines spread across 8 repositories. Contributions came from 2 to 10 developers per repository. ([chart](https://twitter.com/decredproject/status/1014267793041248257))
 
 ## Network
 
@@ -90,13 +92,15 @@ Arbitrade is now [mining](https://arbitrade.io/newsletter/20180607_Domicile_Anno
 
 [Meetup](https://www.meetup.com/DecredBrasil/events/251930022/) in Rio de Janeiro, Brazil. ([photo](https://twitter.com/JonathanVeg2/status/1012888639880167424))
 
-[Campus Party](http://brasil.campus-party.org/cpbrasilia/) in Brasilia, Brazil. @girino, Gabriel Rhama and Matheus Degiovani talked about Decred. Matheus was interviewed by a TV channel. (photos: [1](https://twitter.com/criptofacil/status/1012796023352320005) [2](https://twitter.com/matheusd_tech/status/1013052873800855553) [3](https://twitter.com/matheusd_tech/status/1012786231699279873))
+[Campus Party](http://brasil.campus-party.org/cpbrasilia/) in Brasilia, Brazil. @girino, Gabriel Rhama and Matheus Degiovani talked about Decred. Matheus was interviewed by a TV channel. Check this quick [report](https://view.matrix.org/room/!aNPTuiryMFmdMQWUzb:decred.org/?anchor=$153053539830525TMYGv:decred.org&highlight) about the event, click "Show newer" to continue reading. (photos: [1](https://twitter.com/criptofacil/status/1012796023352320005) [2](https://twitter.com/matheusd_tech/status/1013052873800855553) [3](https://twitter.com/matheusd_tech/status/1012786231699279873))
 
-[Blockchain Connect Conference](https://www.eventbrite.com/e/blockchain-connect-conference-silicon-valley-2018-tickets-44353362100) in Silicon Valley, USA. ([photo](https://twitter.com/jz_bz/status/1012078985595977734)) 
+[Blockchain Connect Conference](https://www.eventbrite.com/e/blockchain-connect-conference-silicon-valley-2018-tickets-44353362100) in Silicon Valley, USA. ([photo](https://twitter.com/jz_bz/status/1012078985595977734))
+
+[Zcon0](https://archive.is/submit/) in Montreal, Canada. @jz [represented](https://twitter.com/jz_bz/status/1012118941877952512) Decred.
 
 Upcoming events:
 
-* Meetup with some of the core Decred team and contributors in Berlin, Germany on July 18, [hosted](https://medium.com/@BlueYard/decred-82b284b4a795) by BlueYard Capital.
+* [Meetup](https://www.eventbrite.co.uk/e/decred-x-blueyard-berlin-meetup-currencies-core-chains-the-future-of-blockchain-governance-and-tickets-47586593783) in Berlin, Germany on July 18. [@jz](https://twitter.com/jz_bz) will give a talk and Q&A about Decred and chat with Ele from [@oscoin](https://twitter.com/oscoin) about incentivizing developers. [Hosted](https://twitter.com/pbanhardt/status/1014167988663209985) by BlueYard Capital.
 * [O'Reilly Open Source Convention](https://conferences.oreilly.com/oscon/oscon-or) in Portland, USA on July 18-19. People willing to attend this developer focused event can use Decred25 discount code in the [registration link](https://conferences.oreilly.com/oscon/oscon-or/public/register) to save 25%. For any questions join [#event_planning](https://decred.slack.com/messages/C66363X44/) and contact [@Jesiki](https://decred.slack.com/team/UAG6W3GFP) so she can invite you to any gatherings in the area.
 
 ## Media
@@ -118,6 +122,7 @@ Videos:
 * [@phenrikand](https://twitter.com/phenrikand) from [@ApolloCapitalAU](https://twitter.com/ApolloCapitalAU) chat with [@joshuam_](https://twitter.com/joshuam_) at @YBFVentures ([youtube](https://www.youtube.com/watch?v=TbutOmE4yMg), [tweet](https://twitter.com/phenrikand/status/1008599031340077057))
 
   > This is an in depth exploration of one of the most interesting projects in the space. ([@ApolloCapitalAU](https://twitter.com/ApolloCapitalAU/status/1008618074050875392))
+* Decred Review (Russian, [youtube](https://www.youtube.com/watch?v=Zj5iKLl75gc))
 
 Audios:
 
@@ -139,9 +144,9 @@ Featured articles:
 
 Articles:
 
-* What is Decred? ([coin-turk.com](https://coin-turk.com/decred-dcr-nedir-nereden-alinir), Turkish)
+* What is Decred? (Turkish, [coin-turk.com](https://coin-turk.com/decred-dcr-nedir-nereden-alinir))
 * EOS, Cardano, Decred Receive Top Ratings by Weiss Ratings ([cryptoslate.com](https://cryptoslate.com/eos-cardano-ada-decred-dcr-receive-top-ratings-by-weiss-ratings/))
-* Is it really interesting to invest in Decred? ([okdiario.com](https://okdiario.com/economia/2018/06/02/interesa-invertir-decred-2369349), Spanish)
+* Is it really interesting to invest in Decred? (Spanish, [okdiario.com](https://okdiario.com/economia/2018/06/02/interesa-invertir-decred-2369349))
 * Decred Seeking to Create Binance and EtherDelta Hybrid as New Exchange Model ([icoexaminer.com](https://www.icoexaminer.com/ico-news/decred-seeking-to-create-binance-and-etherdelta-hybrid-as-new-exchange-model/))
 * Decred Makes Bold Move with Upcoming Decentralized Exchange ([cryptovest.com](https://cryptovest.com/news/decred-makes-bold-move-with-upcoming-decentralized-exchange/))
 * Decred Receives Top Score From Weiss Ratings ([cryptodaily.co.uk](https://cryptodaily.co.uk/2018/06/decred-dcr-receives-top-score-from-weiss-ratings/))
@@ -163,11 +168,11 @@ Articles:
 
 ## Community Discussions
 
-Community stats: Twitter 40,209 (+1,091), Reddit 8,410 (+243), Slack 5,830 (+172), GitHub 392 stars and 918 forks for dcrd repository.
+Community stats: Twitter 40,209 (+1,091), Reddit 8,410 (+243), Slack 5,830 (+172), GitHub 392 stars and 918 forks of dcrd repository.
 
 An update on our communication systems:
 
-* Matrix chat logs [are now](https://twitter.com/joshrickmar/status/1007738206731816960) [viewable](https://gist.github.com/jrick/458eab91a650f24be4237a7db7662dd3) on the web. Not all channels/rooms are in the list yet because not all Slack channels are bridged.
+* Matrix chat logs [are now](https://twitter.com/joshrickmar/status/1007738206731816960) [viewable](https://gist.github.com/jrick/458eab91a650f24be4237a7db7662dd3) on the web with the exception of some channels that are not bridged. The new web logs means our chats are now fully public and indexed by search engines.
 * Slack had an [outage](https://status.slack.com/2018-06/142edcb9e52c7663) on Jun 27 that disturbed some of our communications for couple hours.
 
 Reddit.
