Bullets in Events, start Community

--- a/journal/201806.md
+++ b/journal/201806.md
@@ -88,17 +88,15 @@ Arbitrade is now [mining](https://arbitrade.io/newsletter/20180607_Domicile_Anno
 
 ## Events
 
-[Meetup](https://www.meetup.com/DecredBrasil/events/251458289/) in Belo Horizonte, Brazil.
+Past:
 
-[Meetup](https://www.meetup.com/DecredBrasil/events/251930022/) in Rio de Janeiro, Brazil. ([photo](https://twitter.com/JonathanVeg2/status/1012888639880167424))
+* [Meetup](https://www.meetup.com/DecredBrasil/events/251458289/) in Belo Horizonte, Brazil.
+* [Meetup](https://www.meetup.com/DecredBrasil/events/251930022/) in Rio de Janeiro, Brazil. ([photo](https://twitter.com/JonathanVeg2/status/1012888639880167424))
+* [Campus Party](http://brasil.campus-party.org/cpbrasilia/) in Brasilia, Brazil. @girino, Gabriel Rhama and Matheus Degiovani talked about Decred. Matheus was interviewed by a TV channel. Check this quick [report](https://view.matrix.org/room/!aNPTuiryMFmdMQWUzb:decred.org/?anchor=$153053539830525TMYGv:decred.org&highlight) about the event, click "Show newer" to continue reading. (photos: [1](https://twitter.com/criptofacil/status/1012796023352320005) [2](https://twitter.com/matheusd_tech/status/1013052873800855553) [3](https://twitter.com/matheusd_tech/status/1012786231699279873))
+* [Blockchain Connect Conference](https://www.eventbrite.com/e/blockchain-connect-conference-silicon-valley-2018-tickets-44353362100) in Silicon Valley, USA. ([photo](https://twitter.com/jz_bz/status/1012078985595977734))
+* [Zcon0](https://archive.is/submit/) in Montreal, Canada. @jz [represented](https://twitter.com/jz_bz/status/1012118941877952512) Decred.
 
-[Campus Party](http://brasil.campus-party.org/cpbrasilia/) in Brasilia, Brazil. @girino, Gabriel Rhama and Matheus Degiovani talked about Decred. Matheus was interviewed by a TV channel. Check this quick [report](https://view.matrix.org/room/!aNPTuiryMFmdMQWUzb:decred.org/?anchor=$153053539830525TMYGv:decred.org&highlight) about the event, click "Show newer" to continue reading. (photos: [1](https://twitter.com/criptofacil/status/1012796023352320005) [2](https://twitter.com/matheusd_tech/status/1013052873800855553) [3](https://twitter.com/matheusd_tech/status/1012786231699279873))
-
-[Blockchain Connect Conference](https://www.eventbrite.com/e/blockchain-connect-conference-silicon-valley-2018-tickets-44353362100) in Silicon Valley, USA. ([photo](https://twitter.com/jz_bz/status/1012078985595977734))
-
-[Zcon0](https://archive.is/submit/) in Montreal, Canada. @jz [represented](https://twitter.com/jz_bz/status/1012118941877952512) Decred.
-
-Upcoming events:
+Upcoming:
 
 * [Meetup](https://www.eventbrite.co.uk/e/decred-x-blueyard-berlin-meetup-currencies-core-chains-the-future-of-blockchain-governance-and-tickets-47586593783) in Berlin, Germany on July 18. [@jz](https://twitter.com/jz_bz) will give a talk and Q&A about Decred and chat with Ele from [@oscoin](https://twitter.com/oscoin) about incentivizing developers. [Hosted](https://twitter.com/pbanhardt/status/1014167988663209985) by BlueYard Capital.
 * [O'Reilly Open Source Convention](https://conferences.oreilly.com/oscon/oscon-or) in Portland, USA on July 18-19. People willing to attend this developer focused event can use Decred25 discount code in the [registration link](https://conferences.oreilly.com/oscon/oscon-or/public/register) to save 25%. For any questions join [#event_planning](https://decred.slack.com/messages/C66363X44/) and contact [@Jesiki](https://decred.slack.com/team/UAG6W3GFP) so she can invite you to any gatherings in the area.
@@ -175,25 +173,9 @@ An update on our communication systems:
 * Matrix chat logs [are now](https://twitter.com/joshrickmar/status/1007738206731816960) [viewable](https://gist.github.com/jrick/458eab91a650f24be4237a7db7662dd3) on the web with the exception of some channels that are not bridged. The new web logs means our chats are now fully public and indexed by search engines.
 * Slack had an [outage](https://status.slack.com/2018-06/142edcb9e52c7663) on Jun 27 that disturbed some of our communications for couple hours.
 
-Reddit.
+Jake Yocom-Piatt did an [AMA on r/CryptoTechnology](https://www.reddit.com/r/CryptoTechnology/comments/8nujuo/hello_this_is_jake_yocompiatt_ask_me_anything/), the go-to forum for serious crypto tech discussion. Some discussed topics were Decred attack cost and resistance, voting policies, smart contracts, SPV security, DAO and DPoS.
 
-Jake Yocom-Piatt did an [AMA on r/CryptoTechnology](https://www.reddit.com/r/CryptoTechnology/comments/8nujuo/hello_this_is_jake_yocompiatt_ask_me_anything/), the go-to forum for serious #crypto tech discussion. (TODO: couple words about questions and answers).
-
-Decred miner sellers [discussion](https://www.reddit.com/r/decred/comments/8oz77j/decred_miner_sellers_discussion/).
-
-A new kind of DEX [discussion](https://www.reddit.com/r/decred/comments/8orxdf/a_new_kind_of_decentralized_exchange_dex/).
-
-How centralized is Politeia https://www.reddit.com/r/decred/comments/8pm02p/will_politeia_be_a_centralised/
-
-Controversial debate on photos of models https://www.reddit.com/r/decred/comments/8ppkoz/it_decreds_new_marketing_plan_to_hire_models_to/. Started of frustration it yielded useful discussion on our marketing approach.
-
-A drop in number of transactions https://www.reddit.com/r/decred/comments/8qotqa/huge_drop_in_number_of_transactions/
-
-insette [is back](https://www.reddit.com/r/decred/comments/8sn6zb/what_is_on_chain_cryptocurrency_governance_is_it/e10yl2k/)!
-
-Slack
-
-New channel [#thedex](https://decred.slack.com/messages/CB1BDE40Z/) was created to discuss the DEX proposal after hot discussions on [#general](https://decred.slack.com/archives/C0NRMDVMJ/p1528209752000802), [#random](https://decred.slack.com/archives/C3PAYQJTW/p1528210469000917) and [#trading](https://decred.slack.com/archives/C3PBR19L4/p1528209357000114). It has more than 100 people now and already attracted some developers.
+[A new kind of DEX](https://blog.decred.org/2018/06/05/A-New-Kind-of-DEX/) received an extensive discussion. New channel [#thedex](https://decred.slack.com/messages/CB1BDE40Z/) was created after hot discussions on [#general](https://decred.slack.com/archives/C0NRMDVMJ/p1528209752000802), [#random](https://decred.slack.com/archives/C3PAYQJTW/p1528210469000917), [#trading](https://decred.slack.com/archives/C3PBR19L4/p1528209357000114) channels as well as [reddit](https://www.reddit.com/r/decred/comments/8orxdf/a_new_kind_of_decentralized_exchange_dex/). #thedex has more than 100 people now and already attracted some developers.
 
 A frequent and reasonable question is how the DEX would benefit Decred. @lukebp has put it well:
 
@@ -204,19 +186,21 @@ Another concern that it will slow down other projects was addressed by @davecgh:
 
 > The intent is for an external team to take up the mantle and build it, so it won't have any bearing on the current c0 roadmap.  The important thing to keep in mind is that the goal of Decred is to have a bunch of independent teams on working on different things. ([slack](https://decred.slack.com/archives/C3PBR19L4/p1528241447000199))
 
-https://decred.slack.com/archives/C3P6R055Z/p1527845045000146
-ProgPoW article discussion; davecgh jrick ifdefelse #pow-mining
+A [chat](https://twitter.com/AnselLindner/status/1003708357193150466) about Decred fork resistance started on Twitter and continued on [#trading](https://decred.slack.com/archives/C3PBR19L4/p1528138824000839). Our community members continue to tirelessly educate about the workings of Decred hybrid system. Key takeaway from this chat is that Decred chain is impossible to advance without votes, and to get around that the forker needs to change it to the point when it's no longer Decred.
 
-https://decred.slack.com/archives/C3P6R055Z/p1528734740000121
-possible hashrate of Blake256 miners ~30% higher than sha256d; davecgh taek #pow-mining
+Reddit:
 
-\#pos-mining channel was renamed to [#pos-voting](https://decred.slack.com/messages/C3ZNV8QTX/) in line with an effort to streamline vocabulary used in Decred.
+* mining rigs sellers [discussion](https://www.reddit.com/r/decred/comments/8oz77j/decred_miner_sellers_discussion/)
+* [how centralized](https://www.reddit.com/r/decred/comments/8pm02p/will_politeia_be_a_centralised/) is Politeia
+* controversial [debate](https://www.reddit.com/r/decred/comments/8ppkoz/it_decreds_new_marketing_plan_to_hire_models_to/) on photos of models that started of frustration but yielded useful discussion on our marketing approach
+* a [drop](https://www.reddit.com/r/decred/comments/8qotqa/huge_drop_in_number_of_transactions/) in number of transactions
+* insette [is back](https://www.reddit.com/r/decred/comments/8sn6zb/what_is_on_chain_cryptocurrency_governance_is_it/e10yl2k/).
 
-How Decred is [not vulnerable](https://decred.slack.com/archives/C0NRMDVMJ/p1529127002000075) to SPV leaf/node attack.
+Chats: 
 
-Twitter: small [chat](https://twitter.com/AnselLindner/status/1003708357193150466) about Decred fork resistance, followed by discussion on [slack](https://decred.slack.com/archives/C3PBR19L4/p1528138824000839). Our community members continue to tirelessly educate about the workings of Decred hybrid system. Key takeaway from this chat is that Decred chain is impossible to advance without votes, and to get around that the forker needs to change it to the point when it's no longer Decred.
-
-Nice [pitch](https://twitter.com/paul_btc/status/1011721414158807040) of on-chain governance by @paul_btc.
+* Programmatic Proof-of-Work (ProgPoW) [discussion](https://decred.slack.com/archives/C3P6R055Z/p1527845045000146)
+* [possible hashrate](https://decred.slack.com/archives/C3P6R055Z/p1528734740000121) of Blake256 miners ~30% higher than SHA256d
+* how Decred is [not vulnerable](https://decred.slack.com/archives/C0NRMDVMJ/p1529127002000075) to SPV leaf/node attack
 
 ## Markets
 
@@ -257,6 +241,6 @@ Circle [announced](https://medium.com/circle-blog/introducing-the-circle-asset-f
 
 Bithumb got [hacked](https://cointelegraph.com/news/world-s-sixth-largest-crypto-exchange-by-trade-volume-bithumb-hacked) with a $30 m loss.
 
-An interesting [insight](https://www.youtube.com/watch?v=ioV7mBt7SMA&t=830) from Zcon0 Keynote Panel on governance: "There is no such thing as on-chain governance".
+Zcash organized Zcon0, an event in Canada that focused on privacy tech and governance. An interesting [insight](https://www.youtube.com/watch?v=ioV7mBt7SMA&t=830) from Keynote Panel on governance: "There is no such thing as on-chain governance".
 
 ## About This Issue
